# sourcegraph

./: CHANGELOG.md  WORKSPACE  deps.bzl  go.mod  go.sum  mockgen.temp.yaml  mockgen.test.yaml  package.json  pnpm-lock.yaml  release.yaml  sg.config.yaml  tsconfig.json
.aspect/workflows/: config.yaml
client/browser/: BUILD.bazel
client/web/: BUILD.bazel
client/web-sveltekit/: BUILD.bazel  package.json
client/wildcard/: BUILD.bazel
cmd/frontend/: BUILD.bazel
cmd/migrator/: BUILD.bazel
cmd/msp-example/: main.go
dev/: BUILD.bazel  bazel_stamp_vars.sh  oci_deps.bzl
dev/build-tracker/: BUILD.bazel  main.go
dev/build-tracker-msp/: BUILD.bazel  config.go  main.go  server.go
dev/ci/: push_all.sh
dev/gqltest/: search_test.go
dev/sg/: BUILD.bazel  main.go  sg_start.go
dev/src-expose/: main.go
dev/update-embeddings-list/: package.json
doc/admin/: pings.md
doc/cloud/: index.md
doc/dev/: index.md
docker-images/syntax-highlighter/: Cargo.toml
schema/: bitbucket_server.schema.json  schema.go  settings.schema.json  site.schema.json
third-party-licenses/: ThirdPartyLicenses.csv
wolfi-images/: appliance-frontend.lock.json  appliance.lock.json  batcheshelper.lock.json  blobstore.lock.json  bundled-executor.lock.json  caddy.lock.json  cadvisor.lock.json  cloud-mi2.lock.json  executor-kubernetes.lock.json  executor.lock.json  gitserver.lock.json  jaeger-agent.lock.json  jaeger-all-in-one.lock.json  node-exporter.lock.json  opentelemetry-collector.lock.json  postgres-exporter.lock.json  postgresql-12-codeinsights.lock.json  postgresql-12.lock.json  prometheus.lock.json  redis-exporter.lock.json  redis.lock.json  repo-updater.lock.json  search-indexer.lock.json  searcher.lock.json  server.lock.json  sourcegraph-base.lock.json  sourcegraph-dev.lock.json  sourcegraph-template.lock.json  symbols.lock.json  syntax-highlighter.lock.json
(+315 files in other folders)
